[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Rebind/controls.gd" type="Script" id=1]
[ext_resource path="res://backgroundforoptions.png" type="Texture" id=2]
[ext_resource path="res://Menu/Rebind/Inputmapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Buttons/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Font/smaller_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://Menu/Rebind/ListaAkcija.gd" type="Script" id=6]
[ext_resource path="res://Menu/Buttons/QuitButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/Rebind/SelectButton.gd" type="Script" id=8]
[ext_resource path="res://Menu/Font/menu_big_scragly.tres" type="DynamicFont" id=9]
[ext_resource path="res://fullscreen toggler.tscn" type="PackedScene" id=10]

[sub_resource type="Theme" id=2]
ScrollContainer/icons/ScrollMega = null

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="controls_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -175.0
margin_bottom = 175.0
texture = ExtResource( 2 )

[node name="Inputmapper" parent="." instance=ExtResource( 3 )]

[node name="Stupac" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="Title" parent="Stupac" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 590.0
rect_scale = Vector2( 1, 1 )
custom_colors/font_color_shadow = Color( 0.611765, 0.188235, 0.854902, 1 )
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="Stupac"]
margin_top = 51.0
margin_right = 590.0
margin_bottom = 63.0

[node name="Akcija" type="Label" parent="Stupac/HBoxContainer"]
margin_right = 194.0
margin_bottom = 12.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Akcija"
align = 1
uppercase = true

[node name="Tipka" type="Label" parent="Stupac/HBoxContainer"]
margin_left = 198.0
margin_right = 392.0
margin_bottom = 12.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Tipka"
align = 1
uppercase = true

[node name="Izmjeni" type="Label" parent="Stupac/HBoxContainer"]
margin_left = 396.0
margin_right = 590.0
margin_bottom = 12.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
align = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="Stupac"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 67.0
margin_right = 590.0
margin_bottom = 251.0
size_flags_vertical = 3
theme = SubResource( 2 )
custom_styles/bg = SubResource( 1 )

[node name="ListaAkcija" type="VBoxContainer" parent="Stupac/ScrollContainer"]
margin_right = 590.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="QuitButton" parent="Stupac" instance=ExtResource( 7 )]
margin_top = 255.0
margin_bottom = 310.0
script = null

[node name="Label" parent="Stupac/QuitButton" index="0"]
text = "Prihvati"

[node name="SelectButton" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.819608 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="SelectButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -10.5
margin_right = 88.0
margin_bottom = 10.5
custom_fonts/font = ExtResource( 9 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.854902, 0.188235, 0.188235, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Pritisni tipku"
align = 1
valign = 1

[node name="fullscreen toggler" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="Stupac/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Stupac/QuitButton"]
